--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -55,14 +55,23 @@
         app:layout_constraintTop_toBottomOf="@id/cl_sms" />
 
 
+    <android.support.v7.widget.AppCompatEditText
+        android:id="@+id/et_invite_code"
+        style="@style/AccountEditTextStyle"
+        android:layout_marginTop="@dimen/base_padding"
+        android:hint="邀请码(选填)"
+        android:maxLength="16"
+        app:layout_constraintTop_toBottomOf="@id/et_password" />
+
+
     <LinearLayout
         android:id="@+id/ll_user_agent"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/small_padding"
         android:orientation="horizontal"
-        app:layout_constraintLeft_toLeftOf="@id/et_password"
-        app:layout_constraintTop_toBottomOf="@id/et_password">
+        app:layout_constraintLeft_toLeftOf="@id/et_invite_code"
+        app:layout_constraintTop_toBottomOf="@id/et_invite_code">
 
         <android.support.v7.widget.AppCompatCheckBox
             android:id="@+id/cb_user_agent"
