--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -66,7 +66,7 @@
                 style="@style/ViewLine"
                 android:layout_height="5dp" />
 
-            <RelativeLayout style="@style/BaseTableStyle">
+            <RelativeLayout android:id="@+id/rl_use_rule" style="@style/BaseTableStyle">
 
                 <TextView
                     style="@style/BaseTextStyle"
@@ -85,7 +85,7 @@
                 style="@style/ViewLine"
                 android:layout_height="5dp" />
 
-            <RelativeLayout style="@style/BaseTableStyle">
+            <RelativeLayout android:id="@+id/rl_privacy" style="@style/BaseTableStyle">
 
                 <TextView
                     style="@style/BaseTextStyle"
