--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -119,6 +119,7 @@
             android:layout_marginTop="20dp">
 
             <TextView
+                android:id="@+id/tv_wechat"
                 style="@style/BaseTextStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -128,6 +129,7 @@
                 android:text="微信" />
 
             <TextView
+                android:id="@+id/tv_qq"
                 style="@style/BaseTextStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
