--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -290,4 +290,18 @@
     </style>
 
 
+    <style name="ReplyDialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowBackground">@color/dialog_bg</item>
+        <!--背景-->
+        <item name="android:windowFrame">@null</item>
+        <!--设置无边框-->
+        <item name="android:windowNoTitle">true</item>
+        <!-- 无标题 -->
+        <item name="android:backgroundDimEnabled">true</item>
+        <!-- 模糊 -->
+        <item name="android:windowSoftInputMode">stateAlwaysVisible</item>
+        <!--显示键盘-->
+    </style>
+
+
 </resources>
