--- a/app/src/main/res/layout/activity_business_directory_detail.xml
+++ b/app/src/main/res/layout/activity_business_directory_detail.xml
@@ -16,10 +16,11 @@
             android:layout_height="wrap_content">
 
 
-            <com.youth.banner.Banner
+            <ImageView
                 android:id="@+id/banner"
                 android:layout_width="match_parent"
                 android:layout_height="175dp"
+                android:scaleType="centerCrop"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
