--- a/app/src/main/res/layout/activity_business_school.xml
+++ b/app/src/main/res/layout/activity_business_school.xml
@@ -6,136 +6,56 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ScrollView
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/cl_type"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="wrap_content">
 
 
-        <android.support.constraint.ConstraintLayout
+        <ImageView
+            android:visibility="gone"
+            android:id="@+id/iv_img"
+            android:scaleType="centerCrop"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="175dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:background="@mipmap/banner" />
 
 
-            <com.youth.banner.Banner
-                android:id="@+id/banner"
-                android:layout_width="match_parent"
-                android:layout_height="175dp"
-                android:background="@mipmap/banner"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        <cn.jzvd.JzvdStd
+            android:visibility="gone"
+            android:id="@+id/video_player"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintDimensionRatio="1:0.46"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:orientation="vertical"
-                android:padding="@dimen/base_padding"
-                app:layout_constraintTop_toBottomOf="@id/banner">
+    </android.support.constraint.ConstraintLayout>
 
 
-                <TextView
-                    android:id="@+id/tv_matter_title"
-                    style="@style/TitleTextStyle"
-                    android:layout_width="match_parent"
-                    android:ellipsize="end"
-                    android:singleLine="true"
-                    android:text="发送到发送到发送到" />
-
-                <TextView
-                    android:id="@+id/tv_time"
-                    style="@style/BaseTextStyle"
-                    android:layout_marginTop="@dimen/small_padding"
-                    android:text="2018-09-09"
-                    android:textColor="@color/LightGrey" />
-
-                <WebView
-                    android:id="@+id/web_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/small_padding" />
-
-            </LinearLayout>
-
-
-        </android.support.constraint.ConstraintLayout>
-    </ScrollView>
-
-    <LinearLayout
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:orientation="horizontal"
-        android:paddingTop="@dimen/small_padding"
-        android:paddingBottom="@dimen/small_padding">
+        android:layout_height="48dp"
+        android:layout_gravity="top"
+        android:background="@color/colorPrimary"
+        android:elevation="0dp"
+        app:tabIndicatorColor="@color/colorPrimaryDark"
+        app:tabMode="scrollable"
+        app:tabSelectedTextColor="@color/colorPrimaryDark" />
 
-        <LinearLayout
-            android:id="@+id/ll_praise"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/iv_praise"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@drawable/selector_zan" />
+    </android.support.v4.view.ViewPager>
 
-            <TextView
-                style="@style/BaseTextStyle"
-                android:layout_marginTop="4dp"
-                android:text="点赞"
-                android:textColor="@color/LightGrey" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/ll_collect"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/iv_collect"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@drawable/selector_collect" />
-
-            <TextView
-                style="@style/BaseTextStyle"
-                android:layout_marginTop="4dp"
-                android:text="收藏"
-                android:textColor="@color/LightGrey" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/ll_share"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@mipmap/share" />
-
-            <TextView
-                style="@style/BaseTextStyle"
-                android:layout_marginTop="4dp"
-                android:text="分享"
-                android:textColor="@color/LightGrey" />
-
-        </LinearLayout>
-
-    </LinearLayout>
 
 </LinearLayout>
 
