--- a/app/src/main/res/layout/activity_my_wallet.xml
+++ b/app/src/main/res/layout/activity_my_wallet.xml
@@ -7,7 +7,8 @@
     android:focusableInTouchMode="true"
     android:orientation="vertical">
 
-    <FrameLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
@@ -15,10 +16,9 @@
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:clipChildren="false"
-            android:orientation="vertical"
-            android:paddingBottom="20dp">
+            android:orientation="vertical">
 
 
             <ImageView
@@ -36,7 +36,9 @@
                 android:layout_marginRight="15dp"
                 android:layout_marginTop="95dp"
                 android:clipChildren="false"
+                android:layout_marginBottom="@dimen/base_padding"
                 android:clipToPadding="false"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="5dp"
                 app:layout_constraintTop_toTopOf="parent">
@@ -68,47 +70,49 @@
 
             </android.support.v7.widget.CardView>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/base_padding"
-                android:orientation="vertical"
-                app:layout_constraintTop_toBottomOf="@id/card_wallet">
-
-                <RelativeLayout
-                    style="@style/BasePadding"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/white"
-                    android:orientation="horizontal"
-                    android:paddingBottom="@dimen/small_padding"
-                    android:paddingTop="@dimen/small_padding">
-
-                    <TextView
-                        style="@style/SmallTextStyle"
-                        android:text="消费明细"
-                        android:textColor="@color/LightGrey" />
-
-                    <TextView
-                        style="@style/SmallTextStyle"
-                        android:layout_alignParentRight="true"
-                        android:text="更多"
-                        android:textColor="@color/LightGrey" />
-
-                </RelativeLayout>
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/consume_recycler_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
-
-
-            </LinearLayout>
 
 
         </android.support.constraint.ConstraintLayout>
-    </FrameLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@id/card_wallet">
+
+            <RelativeLayout
+                android:id="@+id/rl_more_consume"
+                style="@style/BasePadding"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:orientation="horizontal"
+                android:paddingBottom="@dimen/small_padding"
+                android:paddingTop="@dimen/small_padding">
+
+                <TextView
+                    style="@style/SmallTextStyle"
+                    android:text="消费明细"
+                    android:textColor="@color/LightGrey" />
+
+                <TextView
+                    style="@style/SmallTextStyle"
+                    android:layout_alignParentRight="true"
+                    android:text="更多"
+                    android:textColor="@color/LightGrey" />
+
+            </RelativeLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/consume_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
+
+
+        </LinearLayout>
+    </LinearLayout>
 
 
     <FrameLayout
