--- a/app/src/main/res/layout/activity_matter.xml
+++ b/app/src/main/res/layout/activity_matter.xml
@@ -6,79 +6,85 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ScrollView
+    <!--<ScrollView-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="0dp"-->
+    <!--android:layout_weight="1">-->
+
+    <!--<android.support.constraint.ConstraintLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent">-->
+
+
+    <!--<android.support.constraint.ConstraintLayout-->
+    <!--android:id="@+id/cl_type"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content">-->
+
+
+    <!--<com.youth.banner.Banner-->
+    <!--android:id="@+id/banner"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="175dp"-->
+    <!--app:layout_constraintLeft_toLeftOf="parent"-->
+    <!--app:layout_constraintRight_toRightOf="parent"-->
+    <!--app:layout_constraintTop_toTopOf="parent"-->
+    <!--tools:background="@mipmap/banner" />-->
+
+
+    <!--<cn.jzvd.JzvdStd-->
+    <!--android:id="@+id/video_player"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="0dp"-->
+    <!--app:layout_constraintDimensionRatio="1:0.46"-->
+    <!--app:layout_constraintLeft_toLeftOf="parent"-->
+    <!--app:layout_constraintRight_toRightOf="parent"-->
+    <!--app:layout_constraintTop_toTopOf="parent" />-->
+
+    <!--</android.support.constraint.ConstraintLayout>-->
+
+
+    <!--<LinearLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:background="@color/white"-->
+    <!--android:orientation="vertical"-->
+    <!--android:padding="@dimen/base_padding"-->
+    <!--app:layout_constraintTop_toBottomOf="@id/cl_type">-->
+
+
+    <!--<TextView-->
+    <!--android:id="@+id/tv_matter_title"-->
+    <!--style="@style/TitleTextStyle"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:ellipsize="end"-->
+    <!--android:singleLine="true"-->
+    <!--tools:text="发送到发送到发送到" />-->
+
+    <!--<TextView-->
+    <!--android:id="@+id/tv_time"-->
+    <!--style="@style/BaseTextStyle"-->
+    <!--android:layout_marginTop="@dimen/small_padding"-->
+    <!--android:textColor="@color/LightGrey"-->
+    <!--tools:text="2018-09-09" />-->
+
+    <!--<WebView-->
+    <!--android:id="@+id/web_view"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content" />-->
+
+    <!--</LinearLayout>-->
+
+
+    <!--</android.support.constraint.ConstraintLayout>-->
+    <!--</ScrollView>-->
+
+
+    <WebView
+        android:id="@+id/web_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
-
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-
-            <android.support.constraint.ConstraintLayout
-                android:id="@+id/cl_type"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-
-                <com.youth.banner.Banner
-                    android:id="@+id/banner"
-                    android:layout_width="match_parent"
-                    android:layout_height="175dp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:background="@mipmap/banner" />
-
-
-                <cn.jzvd.JzvdStd
-                    android:id="@+id/video_player"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    app:layout_constraintDimensionRatio="1:0.46"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-            </android.support.constraint.ConstraintLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:orientation="vertical"
-                android:padding="@dimen/base_padding"
-                app:layout_constraintTop_toBottomOf="@id/cl_type">
-
-
-                <TextView
-                    android:id="@+id/tv_matter_title"
-                    style="@style/TitleTextStyle"
-                    android:layout_width="match_parent"
-                    android:ellipsize="end"
-                    android:singleLine="true"
-                    tools:text="发送到发送到发送到" />
-
-                <TextView
-                    android:id="@+id/tv_time"
-                    style="@style/BaseTextStyle"
-                    android:layout_marginTop="@dimen/small_padding"
-                    android:textColor="@color/LightGrey"
-                    tools:text="2018-09-09" />
-
-                <WebView
-                    android:id="@+id/web_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-            </LinearLayout>
-
-
-        </android.support.constraint.ConstraintLayout>
-    </ScrollView>
-
+        android:layout_weight="1" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -133,13 +139,13 @@
         </LinearLayout>
 
         <LinearLayout
-            android:visibility="gone"
             android:id="@+id/ll_share"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <ImageView
                 android:layout_width="20dp"
