--- a/app/src/main/res/layout/activity_business_directory_detail.xml
+++ b/app/src/main/res/layout/activity_business_directory_detail.xml
@@ -1,75 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <android.support.constraint.ConstraintLayout
+    <WebView
+        android:id="@+id/web_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
 
-        <android.support.constraint.ConstraintLayout
-            android:id="@+id/cl_type"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+</LinearLayout>
 
 
-            <ImageView
-                android:id="@+id/banner"
-                android:layout_width="match_parent"
-                android:layout_height="175dp"
-                android:scaleType="centerCrop"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:background="@mipmap/banner" />
+
+    <!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--xmlns:tools="http://schemas.android.com/tools"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent">-->
+
+    <!--<android.support.constraint.ConstraintLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent">-->
 
 
-            <cn.jzvd.JzvdStd
-                android:id="@+id/video_player"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_constraintDimensionRatio="1:0.46"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </android.support.constraint.ConstraintLayout>
+        <!--<android.support.constraint.ConstraintLayout-->
+            <!--android:id="@+id/cl_type"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content">-->
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:orientation="vertical"
-            android:padding="@dimen/base_padding"
-            app:layout_constraintTop_toBottomOf="@id/cl_type">
+            <!--<ImageView-->
+                <!--android:id="@+id/banner"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="175dp"-->
+                <!--android:scaleType="centerCrop"-->
+                <!--app:layout_constraintLeft_toLeftOf="parent"-->
+                <!--app:layout_constraintRight_toRightOf="parent"-->
+                <!--app:layout_constraintTop_toTopOf="parent"-->
+                <!--tools:background="@mipmap/banner" />-->
 
 
-            <TextView
-                android:id="@+id/tv_matter_title"
-                style="@style/TitleTextStyle"
-                android:layout_width="match_parent"
-                android:ellipsize="end"
-                android:singleLine="true"
-                tools:text="发送到发送到发送到" />
+            <!--<cn.jzvd.JzvdStd-->
+                <!--android:id="@+id/video_player"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="0dp"-->
+                <!--app:layout_constraintDimensionRatio="1:0.46"-->
+                <!--app:layout_constraintLeft_toLeftOf="parent"-->
+                <!--app:layout_constraintRight_toRightOf="parent"-->
+                <!--app:layout_constraintTop_toTopOf="parent" />-->
 
-            <TextView
-                android:id="@+id/tv_time"
-                style="@style/BaseTextStyle"
-                android:layout_marginTop="@dimen/small_padding"
-                android:textColor="@color/LightGrey"
-                tools:text="2018-09-09" />
-
-            <WebView
-                android:id="@+id/web_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
+        <!--</android.support.constraint.ConstraintLayout>-->
 
 
-    </android.support.constraint.ConstraintLayout>
-</ScrollView>
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="@color/white"-->
+            <!--android:orientation="vertical"-->
+            <!--android:padding="@dimen/base_padding"-->
+            <!--app:layout_constraintTop_toBottomOf="@id/cl_type">-->
+
+
+            <!--<TextView-->
+                <!--android:id="@+id/tv_matter_title"-->
+                <!--style="@style/TitleTextStyle"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:ellipsize="end"-->
+                <!--android:singleLine="true"-->
+                <!--tools:text="发送到发送到发送到" />-->
+
+            <!--<TextView-->
+                <!--android:id="@+id/tv_time"-->
+                <!--style="@style/BaseTextStyle"-->
+                <!--android:layout_marginTop="@dimen/small_padding"-->
+                <!--android:textColor="@color/LightGrey"-->
+                <!--tools:text="2018-09-09" />-->
+
+            <!--<WebView-->
+                <!--android:id="@+id/web_view"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content" />-->
+
+        <!--</LinearLayout>-->
+
+
+    <!--</android.support.constraint.ConstraintLayout>-->
+<!--</ScrollView>-->
