--- a/app/src/main/res/layout/activity_promote.xml
+++ b/app/src/main/res/layout/activity_promote.xml
@@ -79,6 +79,7 @@
         android:orientation="vertical"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="30dp"
         app:layout_constraintTop_toBottomOf="@id/ll_area_ceo">
 
 
