--- a/app/src/main/res/layout/item_picture.xml
+++ b/app/src/main/res/layout/item_picture.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:clipToPadding="false"
     android:gravity="center"
+    android:background="@color/white"
     android:orientation="vertical"
     android:padding="@dimen/small_padding">
 
