--- a/app/src/main/res/layout/activity_promote.xml
+++ b/app/src/main/res/layout/activity_promote.xml
@@ -27,11 +27,25 @@
             android:text="体系内达到30个分公司， 其中直推分公司≥5"
             android:textColor="@color/LightGrey" />
 
-        <TextView
-            style="@style/PromoteLableStyle"
-            android:layout_marginTop="4dp"
-            android:text="大区总裁" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/small_padding"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
+            <ImageView
+                android:id="@+id/iv_area_ceo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/base_padding"
+                android:background="@mipmap/vip7_light" />
+
+            <ImageView
+                style="@style/PromoteLableStyle"
+                android:background="@mipmap/promote_area_ceo" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
@@ -51,10 +65,26 @@
             android:text="体系内达到50个分公司， 其中8个直推分公司"
             android:textColor="@color/LightGrey" />
 
-        <TextView
-            style="@style/PromoteLableStyle"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/small_padding"
-            android:text="分红股东" />
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/iv_shareholder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/base_padding"
+                android:background="@mipmap/vip8_light" />
+
+            <ImageView
+                style="@style/PromoteLableStyle"
+                android:background="@mipmap/promote_share_holder" />
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
@@ -75,16 +105,16 @@
         style="@style/PromoteLableMarginStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical"
+        android:layout_marginTop="50dp"
+        android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="30dp"
         app:layout_constraintTop_toBottomOf="@id/ll_area_ceo">
 
-
-        <TextView
+        <ImageView
+            android:id="@+id/iv_company"
             style="@style/PromoteLableStyle"
+            android:background="@mipmap/promote_company"
             android:text="分公司" />
 
     </LinearLayout>
@@ -101,8 +131,9 @@
         app:layout_constraintTop_toBottomOf="@id/ll_company">
 
 
-        <TextView
+        <ImageView
             style="@style/PromoteLableStyle"
+            android:background="@mipmap/promote_lead_proxy"
             android:text="总代理" />
 
     </LinearLayout>
@@ -119,8 +150,9 @@
         app:layout_constraintTop_toBottomOf="@id/ll_leader_proxy">
 
 
-        <TextView
+        <ImageView
             style="@style/PromoteLableStyle"
+            android:background="@mipmap/promote_proxy"
             android:text="代理" />
 
     </LinearLayout>
@@ -137,8 +169,9 @@
         app:layout_constraintTop_toBottomOf="@id/ll_proxy">
 
 
-        <TextView
+        <ImageView
             style="@style/PromoteLableStyle"
+            android:background="@mipmap/promote_vip"
             android:text="VIP" />
 
     </LinearLayout>
@@ -155,8 +188,9 @@
         app:layout_constraintTop_toBottomOf="@id/ll_vip">
 
 
-        <TextView
+        <ImageView
             style="@style/PromoteLableStyle"
+            android:background="@mipmap/promote_gift_box"
             android:text="礼盒装" />
 
     </LinearLayout>
@@ -173,8 +207,9 @@
         app:layout_constraintTop_toBottomOf="@id/ll_gift_box">
 
 
-        <TextView
+        <ImageView
             style="@style/PromoteLableStyle"
+            android:background="@mipmap/promote_retail"
             android:text="零售" />
 
     </LinearLayout>
