--- a/app/src/main/res/layout/activity_join_proxy.xml
+++ b/app/src/main/res/layout/activity_join_proxy.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:focusableInTouchMode="true"
     android:orientation="vertical">
 
@@ -58,24 +59,33 @@
         app:layout_constraintTop_toBottomOf="@id/civ_avatar"
         app:layout_constraintWidth_percent="0.7">
 
+        <TextView
+            android:id="@+id/tv_invite_code"
+            style="@style/BaseTextStyle"
+            android:layout_marginTop="@dimen/base_padding"
+            tools:text="邀请码:1232131"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ImageView
             android:id="@+id/iv_code"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="@dimen/small_padding"
             android:scaleType="fitXY"
             android:src="@mipmap/code"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/tv_invite_code" />
 
         <TextView
             android:id="@+id/tv_save"
             style="@style/BaseTextStyle"
             android:layout_width="0dp"
             android:gravity="center"
-            android:paddingBottom="15dp"
             android:paddingTop="15dp"
+            android:paddingBottom="15dp"
             android:text="保存二维码"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
